# libqtelegram-aseman-edition

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SourceDiary.sh  init  libqtelegram-ae.pri  libqtelegram-ae.pro  libqtelegram.pro  libqtelegram_global.h  qtelegram-ae.pc.in  sync.profile  telegram.cpp  telegram.h  telegrambot.cpp  telegrambot.h
core/: CMakeLists.txt  abstractapi.cpp  abstractapi.h  api.cpp  api.h  connection.cpp  connection.h  dcauth.cpp  dcauth.h  dcprovider.cpp  dcprovider.h  endpoint.h  eventtimer.cpp  inboundpkt.cpp  inboundpkt.h  outboundpkt.cpp  outboundpkt.h  query.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  settings.cpp  settings.h  updatesaid.cpp  updatesaid.h
debian/: changelog  control  files  libqt5telegram-dev.install  libqt5telegram.install  libqtelegram-ae0.install  qml-module-telegramqml.install
documents/functions/: account.md  auth.md  bots.md  channels.md  help.md  index.md  langpack.md  messages.md  payments.md  phone.md  stickers.md  updates.md  upload.md
documents/types/: accountdaysttl.md  accountpasswordsettings.md  accountprivacyrules.md  accounttmppassword.md  authauthorization.md  authcodetype.md  authexportedauthorization.md  authpasswordrecovery.md  authsentcodetype.md  botcommand.md  botinfo.md  botinlineresult.md  cdnconfig.md  cdnpublickey.md  channeladminlogevent.md  channeladminlogeventaction.md  channeladminlogeventsfilter.md  channeladminrights.md  channelbannedrights.md  channelmessagesfilter.md  channelparticipant.md  channelparticipantsfilter.md  channelsadminlogresults.md  channelschannelparticipants.md  chat.md  chatfull.md  chatinvite.md  chatparticipant.md  chatparticipants.md  config.md  contactlink.md  contactsblocked.md  contactscontacts.md  contactsfound.md  contactstatus.md  datajson.md  dcoption.md  decryptedmessage.md  decryptedmessageaction.md  decryptedmessagelayer.md  (+96 more)
examples/: examples.pro
examples/telegram/: telegram.pro
file/: CMakeLists.txt  file.h  filehandler.cpp  filehandler.h  fileoperation.h  uploadfile.cpp  uploadfile.h  uploadfileengine.h
functions/: account.cpp  account.h  auth.cpp  auth.h  contacts.cpp  contacts.h  functions.pri  geochats.cpp  geochats.h  help.cpp  help.h  messages.cpp  messages.h  photos.cpp  photos.h  telegramfunctionobject.cpp  telegramfunctionobject.h  updates.cpp  updates.h  upload.cpp  upload.h  users.cpp  users.h
libqtelegram-ae/: init  libqtelegram-ae.pri  libqtelegram_global.h  telegram.cpp  telegram.h  telegrambot.cpp  telegrambot.h
libqtelegram-ae/core/: connection.cpp  connection.h  dcauth.cpp  dcprovider.cpp  dcprovider.h  eventtimer.h  outboundpkt.cpp  query.h  session.h  settings.cpp  settings.h  settingstools.h
libqtelegram-ae/file/: downloadfile.h  filehandler.cpp  filehandler.h
libqtelegram-ae/qmake/: headerinstall.pri
libqtelegram-ae/scheme/: scheme-53.tl  scheme-65.tl  scheme-66.tl  scheme-68.tl  scheme-70.tl
libqtelegram-ae/secret/: encrypter.h  secretchat.h
libqtelegram-ae/tools/: abstractbotstate.cpp  abstractbotstate.h  botstatemanager.cpp  botstatemanager.h
libqtelegram-ae/util/: utils.cpp  utils.h
samples/TelegramStatusOnliner/: main.cpp
schema/: scheme-45.tl
scheme/: scheme-54.tl  scheme-57.tl  scheme-65.tl
secret/: CMakeLists.txt  decryptedmessageaction.h  decryptedmessagebuilder.cpp  decryptedmessagemedia.h  decrypter.cpp  decrypter.h  encrypter.cpp  encrypter.h  secretchat.cpp  secretchat.h  secretchatmessage.h  secretstate.cpp  secretstate.h
src/: src.pro
src/qml/: qml.pro  qmldir  telegramqml.pri  telegramqmlinitializer.cpp  telegramqmlinitializer.h
src/telegram/: telegram.pro
telegram/: coretypes.h  telegram.pri  telegramapi.cpp  telegramapi.h  telegramcore.cpp  telegramcore.h  telegramcore_globals.h
telegram/customtypes/: customtypes.h  customtypes.pri  uploadgetfile.cpp  uploadgetfile.h  uploadsendencrypted.cpp  uploadsendencrypted.h  uploadsendfile.cpp  uploadsendfile.h  uploadsendphoto.cpp  uploadsendphoto.h
telegram/documents/: index.md  start.md
telegram/functions/: account.cpp  account.h  auth.cpp  auth.h  channels.cpp  channels.h  contacts.cpp  contacts.h  functions.h  functions.pri  help.cpp  help.h  messages.cpp  messages.h  photos.cpp  photos.h  updates.cpp  updates.h  upload.h  users.h
telegram/objects/: accountauthorizationsobject.cpp  accountauthorizationsobject.h  accountdaysttlobject.cpp  accountdaysttlobject.h  accountpasswordinputsettingsobject.cpp  accountpasswordinputsettingsobject.h  accountpasswordobject.cpp  accountpasswordobject.h  accountpasswordsettingsobject.cpp  accountpasswordsettingsobject.h  accountprivacyrulesobject.cpp  accountprivacyrulesobject.h  accountsentchangephonecodeobject.cpp  accountsentchangephonecodeobject.h  audioobject.cpp  audioobject.h  authauthorizationobject.cpp  authauthorizationobject.h  authcheckedphoneobject.cpp  (+298 more)
tests/: CMakeLists.txt  tests_config.cpp.in  tests_config.h
tests/acceptance/: CMakeLists.txt  login_test.cpp
tests/unit/core/: CMakeLists.txt  settings_test.cpp
tools/: abstractbotstate.cpp  abstractbotstate.h  botstatemanager.cpp  botstatemanager.h
types/: CMakeLists.txt  accountauthorizations.cpp  accountauthorizations.h  accountdaysttl.cpp  accountdaysttl.h  accountpassword.cpp  accountpassword.h  accountpasswordinputsettings.cpp  accountpasswordinputsettings.h  accountpasswordsettings.cpp  accountpasswordsettings.h  accountprivacyrules.cpp  accountprivacyrules.h  accountsentchangephonecode.cpp  accountsentchangephonecode.h  audio.cpp  audio.h  authauthorization.cpp  authauthorization.h  authcheckedphone.cpp  authcheckedphone.h  authexportedauthorization.cpp  authexportedauthorization.h  authorization.cpp  authorization.h  authpasswordrecovery.cpp  authpasswordrecovery.h  authsentcode.cpp  authsentcode.h  chat.cpp  chat.h  chatfull.cpp  chatfull.h  chatinvite.cpp  chatinvite.h  chatlocated.cpp  chatlocated.h  chatparticipant.cpp  chatparticipant.h  chatparticipants.cpp  (+215 more)
util/: CMakeLists.txt  constants.h  cryptoutils.cpp  cryptoutils.h  tlvalues.h  utils.cpp  utils.cpp.in  utils.h
(+755 files in other folders)
