set(TYPES_HEADERS
    dcoption.h
    userprofilephoto.h
    filelocation.h
    userstatus.h
    user.h
    inputpeer.h
    chat.h
    chatphoto.h
    geopoint.h
    peer.h
    peernotifysettings.h
    dialog.h
    photosize.h
    photo.h
    audio.h
    video.h
    document.h
    messagemedia.h
    messageaction.h
    message.h
    chatparticipant.h
    chatparticipants.h
    contactsmylink.h
    contactsforeignlink.h
    decryptedmessage.h
    decryptedmessagemedia.h
    geochatmessage.h
    inputuser.h
    contact.h
    update.h
    notifypeer.h
    contactslink.h
    contactstatus.h
    inputcontact.h
    importedcontact.h
    contactblocked.h
    messagesfilter.h
    inputmedia.h
    inputfile.h
    inputgeopoint.h
    inputvideo.h
    inputaudio.h
    inputdocument.h
    inputphoto.h
    storagefiletype.h
    inputfilelocation.h
    chatfull.h
    inputchatphoto.h
    inputphotocrop.h
    encryptedmessage.h
    updatesstate.h
    encryptedfile.h
    inputnotifypeer.h
    inputpeernotifysettings.h
    inputgeochat.h
    wallpaper.h
    inputencryptedchat.h
    inputencryptedfile.h
    decryptedmessageaction.h
    encryptedchat.h
    chatlocated.h
    sendmessageaction.h
    types.h)

if(NOT CLICK_MODE)
INSTALL(FILES ${TYPES_HEADERS} 
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/libqtelegram/types)
endif(NOT CLICK_MODE)
